--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "fast-csv": "^4.3.6",
+    "json2csv": "^5.0.6",
     "mongoose": "^6.1.6"
   }
 }
